--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                     informed decision by going through each and every photograph, so that you may get the feel of
                     checking out the property live. You may get a clear idea of the property overall by glancing through
                     some of these attracting photographs.</p>
-                <a href="gallery.html">View More</a>
+                <a href="gallery.html" class="btn hvr-shutter-out-horizontal">View More</a>
             </div>
             <div class="col-md-6">
                 <div class="gallery">
