--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 
     </div>
 
-    <div class="row w90">
+    <div class="row w90 slideanim">
         <div class="col-md-7">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
