--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 
     </div>
 
-    <div class="row w90 slideanim">
+    <div class="row w90">
         <div class="col-md-7">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
@@ -793,7 +793,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 slideanim">
             <div class="rooms-details">
                 <h3>CUEST ROOM</h3>
                 <p class="font-18 mp-bold">Prices Start from: $499</p>
