--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         .navbar {
             margin-bottom: 0;
-            background-color: transparent;
+            background-color: #fff;
             z-index: 9999;
             border: 0;
             font-size: 12px !important;
