--- a/index.html
+++ b/index.html
@@ -637,6 +637,10 @@
             div.img-counter {
                 width: 100%;
             }
+
+            .carousel-indicators {
+                display: none;
+            }
         }
 
         @media screen and (max-width: 480px) {
