--- a/index.html
+++ b/index.html
@@ -641,6 +641,10 @@
             .carousel-indicators {
                 display: none;
             }
+
+            div.photo-gallery {
+                margin-bottom: 50px;
+            }
         }
 
         @media screen and (max-width: 480px) {
@@ -880,7 +884,7 @@
     <div class="container-fluid text-center">
         <br>
         <div class="row slideanim">
-            <div class="col-md-6">
+            <div class="col-md-6 photo-gallery">
                 <p class="title">Photo gallery</p>
                 <p>Here are some of the photographs, attached hereby for your reference. Take an
                     informed decision by going through each and every photograph, so that you may get the feel of
