--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                         <li>Walking Track</li>
                         <li>Multiple High-Def LED Tv’s</li>
                     </ul>
-                    <a href="#" class="ms-regular">Read More</a>
+                    <a href="https://www.booking.com/hotel/nl/ivory-amsterdam-apartment.en-gb.html?aid=356980;label=gog235jc-1DCAsoqQFCGHJhZmFlbC1yb29tLWluLWFtc3RlcmRhbUgJWANoqQGIAQGYAQm4ARjIAQ3YAQPoAQH4AQKIAgGoAgS4ArHWnokGwAIB0gIkODA0YjI0N2MtOGM2NS00OTExLTgzMjgtY2ZhYjA1ODRjNDFm2AIE4AIB;sid=aa3120907399c96ba566f26e442ab504;checkin_monthday=21&checkin_year_month=2021-10&checkout_monthday=22&checkout_year_month=2021-10&dist=0&do_availability_check=1&group_adults=2&group_children=0&hp_avform=1&hp_group_set=0&no_rooms=1&origin=hp&sb_price_type=total&src=hotel&tab=1&type=total&" class="ms-regular">Read More</a>
                 </div>
             </div>
         </div>
