--- a/contact.html
+++ b/contact.html
@@ -482,6 +482,32 @@
                 width: 100%;
                 display: block;
             }
+
+            form.contact-form div.full-name,
+            form.contact-form div.email-mobile {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+            }
+
+            form.contact-form div.full-name div,
+            form.contact-form div.email-mobile div {
+                width: 100%;
+            }
+
+            form.contact-form div.date {
+                display: flex;
+                justify-content: space-around;
+                flex-direction: column;
+            }
+
+            form.contact-form>div {
+                margin: 0;
+            }
+
+            form.contact-form div.form-field {
+                margin: 10px auto;
+            }
         }
     </style>
 </head>
@@ -533,7 +559,8 @@
                 </div>
                 <div>
                     <br>
-                    <p><span class="glyphicon glyphicon-map-marker"></span> Buiten Brouwersstraat 12-1, 1013GK, Amsterdam</p>
+                    <p><span class="glyphicon glyphicon-map-marker"></span> Buiten Brouwersstraat 12-1, 1013GK,
+                        Amsterdam</p>
                     <p><span class="glyphicon glyphicon-map-marker"></span> Registered office address - Arent Janszoon
                         Ernststr 727-L; 1082 LJ Amsterdam</p>
                     <p><span class="glyphicon glyphicon-phone"></span> +312 02 41 70 01</p>
@@ -599,8 +626,8 @@
             <br>
             <!-- Image of location/map -->
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.418426425101!2d4.8890528159952344!3d52.38096465427579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c930090907%3A0x69db5eabb007c15c!2sBuiten%20Brouwersstraat%2012%2C%201013%20GK%20Amsterdam%2C%20Netherlands!5e0!3m2!1sen!2sua!4v1630310660379!5m2!1sen!2sua"
-            width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.418426425101!2d4.8890528159952344!3d52.38096465427579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c930090907%3A0x69db5eabb007c15c!2sBuiten%20Brouwersstraat%2012%2C%201013%20GK%20Amsterdam%2C%20Netherlands!5e0!3m2!1sen!2sua!4v1630310660379!5m2!1sen!2sua"
+                width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <footer class="container-fluid text-center">
             <a href="#myPage" title="To Top">
