--- a/contact.html
+++ b/contact.html
@@ -508,6 +508,9 @@
             form.contact-form div.form-field {
                 margin: 10px auto;
             }
+            #reportrange span {
+                font-size: 14px;
+            }
         }
     </style>
 </head>
